--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "knex": "^3.1.0",
-    "mysql2": "^3.13.0"
+    "mysql2": "^3.13.0",
+    "uuid": "^11.1.0"
   }
 }
