Postgres Initial Commit - Link Successful

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DB_NAME=<YOUR_DB_NAME>
 DB_USER=<YOUR_DB_USER>
 DB_PASSWORD=<YOUR_DB_PASSWORD>
 CORS_ORIGIN=http://localhost:5173
+SUPABASE_PASSWORD=<SUPABASE_PROJECT_PASSWORD>
+SUPABASE_URL=<SUPABASE_URL>
