--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "migrate": "knex migrate:latest",
+    "migrate:down": "knex migrate:down",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed": "knex seed:run",
+    "build": "npm i && npm run migrate && npm run seed"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +22,7 @@
     "express": "^4.21.2",
     "knex": "^3.1.0",
     "mysql2": "^3.13.0",
+    "pg": "^8.14.1",
     "uuid": "^11.1.0"
   }
 }
